<resources>
    <string name="app_name">Права Мобил</string>
    <string name="welcome">Добро пожаловать в</string>
    <string name="prava_mobil_cool">Права Мобил!</string>
    <string name="january">Января</string>
    <string name="february">Февраля</string>
    <string name="march">Марта</string>
    <string name="april">Апреля</string>
    <string name="may">Мая</string>
    <string name="june">Июня</string>
    <string name="july">Июля</string>
    <string name="august">Августа</string>
    <string name="september">Сентября</string>
    <string name="october">Октября</string>
    <string name="november">Ноября</string>
    <string name="december">Декабря</string>
    <string name="sign_in">Войти</string>
    <string name="enter">Вход</string>
    <string name="wrong_password">Парль неверный</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="remember_me">Зампомнить меня</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="phone_number">Номер телефона</string>
    <string name="name">Имя</string>
    <string name="registration">Регистрация</string>
    <string name="name_alert">Поле не заполнено</string>
    <string name="get_code">Получить код</string>
    <string name="sms_code_title">Укажите последние 4 цифры номера телефона с которого поступит проверочный звонок</string>
    <string name="retry_call">Заказать повторный звонок</string>
    <string name="add_password">Установите пароль</string>
    <string name="next">Продолжить</string>
    <string name="add_password_help">Пароль должен содержать 8 символов</string>
    <string name="passwords_mismatch">Пароли не совпадают</string>
    <string name="invalid_code">*Неверный код</string>
    <string name="enter_email">Введите почту</string>
    <string name="email">Email</string>
    <string name="email_error">Неверный формат email</string>
    <string name="email_help">Используется для получения договора и восстановления пароля</string>
    <string name="choose_category">Выберите категорию обучения</string>
    <string name="change_school">Сменить автошколу</string>
    <string name="ubuntu_medium">ubuntu_m</string>
    <string name="mechanic">Механика</string>
    <string name="automatic">Автомат</string>
    <string name="select_theory_title">Обучение теории</string>
    <string name="theory_offline">В учебном классе</string>
    <string name="theory_online">Online</string>
    <string name="greetings_morning">Доброе утро,</string>
    <string name="greetings_day">Добрый день,</string>
    <string name="greetings_evening">Добрый вечер,</string>
    <string name="greetings_night">Доброй ночи,</string>
    <string name="ok">Ок</string>
    <string name="filial_title">Филиал</string>
    <string name="start">Запуск</string>
    <string name="time_list">Расписание</string>
    <string name="choose_theory_group">Выберите группу по теории</string>
    <string name="tariff">Тариф</string>
    <string name="in_contract_title">Включено в договор</string>
    <string name="additional_payments">Дополнительные затраты</string>
    <string name="may_be_installments">Возможна рассрочка</string>
    <string name="back">Назад</string>
    <string name="next_tariff">Следующий</string>
    <string name="select">Выбать</string>
    <string name="choose_payment_option">Выберите способ оплаты</string>
    <string name="payment_options">Способ оплаты</string>
    <string name="first_payment">Первый платеж</string>
    <string name="payments_dates_title">График платежей</string>
    <string name="payment_date_title">Срок оплаты</string>
    <string name="sum">Сумма</string>
    <string name="document_type">Тип документа</string>
    <string name="of_student">Обучающегося</string>
    <string name="choose_document_type">Выберите тип документа</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="third_name_if_true">Отчество (при наличии)</string>
    <string name="birth_date">Дата рождения</string>
    <string name="student">Обучающийся</string>
    <string name="series">Серия</string>
    <string name="number">Номер</string>
    <string name="giver">Кем выдан</string>
    <string name="given_date">Дата выдачи</string>
    <string name="department_code">Код подразделения</string>
    <string name="passport_data">Паспортные данные</string>
    <string name="add">Добавить</string>
    <string name="passport_scan_title">Добавьте скан главной страницы паспорта</string>
    <string name="add_snils">Добавьте СНИЛС</string>
    <string name="add_snils_scan">Добавить скан СНИЛС</string>
    <string name="snils">СНИЛС</string>
    <string name="registration_address">Адрес регистрации</string>
    <string name="living_address">Адрес проживания</string>
    <string name="region">Область</string>
    <string name="city">Город</string>
    <string name="street">Улица</string>
    <string name="house">Дом</string>
    <string name="housing">Корпус</string>
    <string name="apartment">Квартира</string>
    <string name="registration_and_living_address">Адрес проживания совпадает с регистрицей</string>
    <string name="registration_scan_title">Добавьте скан регистрации по паспорту</string>
    <string name="your_photo">Ваше фото</string>
    <string name="student_representative">Представитель обучающегося</string>
    <string name="student_is_not_adult">Обучающийся несовершеннолетний!</string>
    <string name="needed_representative_data">Необходимо ввести данные представителя</string>
    <string name="representatives">Представителя</string>
    <string name="checkdata_title">Внимательно проверьте данные</string>
    <string name="passport">Паспорт</string>
    <string name="transmission">Трансмиссия</string>
    <string name="theory_group_form">Форма обучения</string>
    <string name="given">выдан</string>
    <string name="contract_sent_by_email">Договор отправлен по email</string>
    <string name="please_read_contract">Внимательно ознакомьтесь с условиями договора!</string>
    <string name="i_confirm_contract">Я ознакомлен и согласен с условиями договора</string>
    <string name="parent_confirm_contract">Представитель согласен с условиями договора</string>
    <string name="student_confirm_contract">Обучающийся согласен с условиями договора</string>
    <string name="contract_confirmed">Договор успешно заключен!</string>
    <string name="main">Главная</string>
    <string name="payments">Платежи</string>
    <string name="more">Еще</string>
    <string name="theory">Теория</string>
    <string name="practice">Практика</string>
    <string name="exam">Экзамен</string>
    <string name="teacher">Преподаватель</string>
    <string name="lesson_history">История занятий</string>
    <string name="pdd_tickets">Билеты ПДД</string>
    <string name="call_instructor">Звонок\nинструктору</string>
    <string name="change_instructor">Сменить\nинструктора</string>
    <string name="instructor">Инструктор</string>
    <string name="car">Автомобиль</string>
    <string name="menu">Меню</string>
    <string name="education_starts">Обучение началось!</string>
    <string name="education_starts_text">Для записи на вождение вам необходимо получить шоферскую комиссию и заполнить данные  во вкладке “Практика”</string>
    <string name="how_get_spravka">Узнать о получении справки</string>
    <string name="needed_spravka_data">Необходимо заполнить данные по шоферской комисси</string>
    <string name="add_data">Заполнить данные</string>
    <string name="waiting">Ожидайте!</string>
    <string name="confirm_may">Проверка шоферской комиссии\nзанимает до 24 часов</string>
    <string name="spravka_confirmed">Справка прошла проверку!</string>
    <string name="spravka_noconfirmed">Справка не прошла проверку!</string>
    <string name="spravka_confirmed_text">Запишитесь на вождение с помощью Меню во вкладке Практика</string>
    <string name="spravka_noconfirmed_text">Заполните актуальные данные во вкладке Практика</string>
    <string name="spravka_data_title">Шоферская комиссия</string>
    <string name="spravka_data_text">Заполнение полей должно быть строго в соответсвии с данными по медсправке!</string>
    <string name="done">Готово</string>
    <string name="add_spravka_scan">Загрузите скан справки</string>
    <string name="medical_name">Название мед центра (полностью)</string>
    <string name="license">Лицензия</string>
    <string name="given_date_spravka">Дата получения</string>
    <string name="send">Отправить</string>
    <string name="on_instructor_change">на смену инструктора</string>
    <string name="request">Запрос</string>
    <string name="reason">Причина</string>
    <string name="signup_to_practice">Записаться на занятие</string>
    <string name="learn_cancel">Отменить занятие</string>
    <string name="lessons_history">История занятий</string>
    <string name="news">Новости</string>
    <string name="profile">Профиль</string>
    <string name="about">Об автошколе</string>
    <string name="faq">Часто задаваемые вопросы</string>
    <string name="rate_app">Оценить приложение</string>
    <string name="call_to_school">Позвонить в автошколу</string>
    <string name="sign_out">Выход из аккаунта</string>
    <string name="choose_instructor">Выберите инструктора</string>
    <string name="available_time">Доступное время</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="end_record">Завершить запись</string>
    <string name="_12">12 июня (вторник)</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="for_lesson_cancel">Для отмены нажмите на занятие\nОтмена доступна за 24 часа</string>
    <string name="date">Дата</string>
    <string name="status">Статус</string>
    <string name="confirm_q">Подтвердить?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="record_added">Запись добавлена</string>
    <string name="more_about_lesson">Подробнее о занятии</string>
    <string name="cancel_q">Отменить?</string>
    <string name="rate_lesson">Оценить\nзанятие</string>
    <string name="lesson_cancel">Отменить\nзанятие</string>
    <string name="your_rate">Ваша оценка</string>
    <string name="your_comment">Комментарий</string>
    <string name="missed">Отсутствует</string>
    <string name="rate_lesson_title">Оценить занятие</string>
    <string name="dirty_car">Грязная машина</string>
    <string name="rude_instructor">Грубый инструктор</string>
    <string name="late">Опоздание</string>
    <string name="no_comment"> Не обьясняет</string>
    <string name="add_callback">Оставить отзыв</string>
    <string name="politeness">Вежливость</string>
    <string name="lesson_quality">Качество обучения</string>
    <string name="clear_car">Чистота машины</string>
    <string name="punctuality">Пунктуальность</string>
    <string name="callback">Отзыв</string>
    <string name="about_practice">о практическом занятиии</string>
    <string name="contract_price">Стоимость договора</string>
    <string name="payed">Оплачено</string>
    <string name="additional_services">Дополнительные услуги</string>
    <string name="pay">Оплатить</string>
    <string name="nearest_payment">Ближайший платеж</string>
    <string name="early_payment">Досрочное погашение</string>
    <string name="indebtedness">У вас появилась задолженность</string>
    <string name="way">Способ</string>
    <string name="service">Услуга</string>
    <string name="choose_school">Выберите автошколу</string>
</resources>