<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".view.fragment.signin.SignInFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/bt_signin_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/signin_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_signin_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ubuntu_b"
        android:text="@string/enter"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signin_cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_title">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login"
            android:textColorHint="@color/hint"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_m" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/signin_cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_cardView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:textColorHint="@color/hint"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_m"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/bt_signin_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_m"
        android:text="@string/forget_password"
        android:textColor="@color/main"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/signin_remember_chek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signin_remember_chek" />

    <CheckBox
        android:id="@+id/signin_remember_chek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu_m"
        android:text="@string/remember_me"
        android:textColor="@color/main"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/signin_cardView2"
        app:layout_constraintTop_toBottomOf="@+id/signin_cardView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_signin_enter"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_main_button"
        android:fontFamily="@font/ubuntu_b"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/signin_cardView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signin_cardView2"
        app:layout_constraintTop_toBottomOf="@+id/signin_remember_chek" />

</androidx.constraintlayout.widget.ConstraintLayout>