<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    tools:context=".view.dialog.InstructorCancelDialogFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/instructor_cancel_title"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ubuntu_b"
        android:text="@string/request"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/instructor_cancel_title2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/ubuntu_r"
        android:text="@string/on_instructor_change"
        android:textAlignment="center"
        android:textColor="@color/gray_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructor_cancel_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/instructor_cancel_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/transparent"
        android:hint="@string/reason"
        android:textColorHint="@color/hint"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructor_cancel_title2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/instructor_cancel_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/ic_rectangle_light_gray"
            android:fontFamily="@font/ubuntu_m"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="6"
            android:maxLines="6"
            android:minLines="6"
            android:paddingHorizontal="12dp"
            android:scrollbars="vertical"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="?attr/colorOnSecondary"
            app:keep_hint="true"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_instructor_cancel_send"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_main_button"
        android:fontFamily="@font/ubuntu_b"
        android:singleLine="true"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_instructor_cancel_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructor_cancel_field" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_instructor_cancel_close"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ic_transparent_button"
        android:fontFamily="@font/ubuntu_b"
        android:singleLine="true"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/main"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>