<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.progress.confirmcontract.ConfirmContractFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirm_contract_content_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/contract_title_image"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:src="@drawable/ic_sent_by_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contract_confirm_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/ubuntu_b"
            android:text="@string/contract_sent_by_email"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contract_title_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contract_client_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_r"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/gray_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contract_confirm_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/read_contract_alert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_r"
            android:text="@string/please_read_contract"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contract_client_email" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/contract_student_chek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/ubuntu_r"
            android:paddingStart="8dp"
            android:text="@string/i_confirm_contract"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/read_contract_alert" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/contract_parent_chek1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/ubuntu_r"
            android:paddingStart="8dp"
            android:text="@string/parent_confirm_contract"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/read_contract_alert" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/contract_parent_chek2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/ubuntu_r"
            android:paddingStart="8dp"
            android:text="@string/student_confirm_contract"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contract_parent_chek1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_contract_next"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/ic_main_button"
            android:fontFamily="@font/ubuntu_b"
            android:singleLine="true"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/read_contract_alert"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>